разметка главной страницы

--- a/src/blocks/footer/footer.html
+++ b/src/blocks/footer/footer.html
@@ -1,4 +1,90 @@
 <footer class="footer">
-  <h2>Footer</h2>
-  <input type="text" placeholder="Введите">
+  <div class="footer__columns">
+    <div class="footer__column">
+      <a class="footer__logo"></a>
+      <p class="footer__copyright">© 2024 Все права защищены</p>
+      <nav class="footer__nav">
+        <ul class="footer__nav-list">
+          <li><a class="footer__link" href="#0">Политика обработки персональных данных</a></li>
+          <li><a class="footer__link" href="#0">Согласие на обработку персональных данных</a></li>
+          <li><a class="footer__link" href="#0">Правила оплаты</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer__column">
+      <h2 class="footer__title">Меню</h2>
+      <nav class="footer__nav">
+        <ul class="footer__nav-list">
+          <li><a class="footer__link" href="#0">Главная</a></li>
+          <li><a class="footer__link" href="#0">Преимущества</a></li>
+          <li><a class="footer__link" href="#0">Преимущества</a></li>
+          <li><a class="footer__link" href="#0">Тарифы</a></li>
+          <li><a class="footer__link" href="#0">FAQ</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer__column">
+      <h2 class="footer__title text-decor">Контакты</h2>
+      <nav class="footer__nav">
+        <ul class="footer__nav-list">
+          <li>
+            <a class="footer__link" href="#0">
+              <span class="footer__link-icon">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <use href="./images/icons.svg#arrow-right"></use>
+                </svg>
+              </span>
+              +7 916 165-55-55
+            </a>
+          </li>
+          <li>
+            <a class="footer__link" href="#0">
+              <span class="footer__link-icon">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <use href="./images/icons.svg#arrow-right"></use>
+                </svg>
+              </span>
+              Telegram
+            </a>
+          </li>
+          <li>
+            <a class="footer__link" href="#0">
+              <span class="footer__link-icon">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <use href="./images/icons.svg#arrow-right"></use>
+                </svg>
+              </span>
+              WhatsApp
+            </a>
+          </li>
+          <li>
+            <a class="footer__link" href="#0">
+              <span class="footer__link-icon">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <use href="./images/icons.svg#arrow-right"></use>
+                </svg>
+              </span>
+              Qr-menu@test.tu
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </footer>
