--- a/src/blocks/head/head.html
+++ b/src/blocks/head/head.html
@@ -2,9 +2,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="" />
-  <meta property="og:title" content="" />
-  <meta property="og:description" content="" />
+  <meta name="description" content="QR-меню для заведений. Забудьте про печать меню, необходимости перепечатывать из за изменения цен, печати сезонных меню, порванных и испорченных меню" />
+  <meta property="og:title" content="QR-меню для заведений" />
+  <meta property="og:description" content="QR-меню для заведений. Забудьте про печать меню, необходимости перепечатывать из за изменения цен, печати сезонных меню, порванных и испорченных меню" />
   <meta property="og:url" content="https://test.ru" />
   <meta property="og:image" content="./images/images/social-image.jpg" />
   <meta property="twitter:card" content="summary_large_image" />
