--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -1,11 +1,37 @@
 <!-- Шапка -->
 <header class="header">
-  <h1 class="header__title">Title</h1>
+  <a class="header__logo"></a>
   <menu class="menu header__menu">
     <ul class="menu__list">
-      <li>Главная</li>
-      <li>О нас</li>
-      <li>Контакты</li>
+      <li><a class="menu__link" href="#0">Преимущества</a></li>
+      <li><a class="menu__link" href="#0">Как это работает</a></li>
+      <li><a class="menu__link" href="#0">Тарифы</a></li>
+      <li><a class="menu__link" href="#0">FAQ</a></li>
     </ul>
+    <ul class="menu__social-list">
+      <li><a class="menu__social-link" href="#0">
+        <svg
+          class="menu__social-icon"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+        >
+          <use href="./images/icons.svg#whatsapp"></use>
+        </svg>
+      </a></li>
+      <li><a class="menu__social-link" href="#0">
+        <svg
+          class="menu__social-icon"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+        >
+          <use href="./images/icons.svg#telegram"></use>
+        </svg>
+      </a></li>
+    </ul>
+    <button class="button button_theme_outline" type="button">
+      <span class="button__text">Войти</span>
+    </button>
   </menu>
 </header>
