разработка лендинга начало

--- a/src/blocks/footer/footer.html
+++ b/src/blocks/footer/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer__columns">
-    <div class="footer__column">
+    <div class="footer__column footer__column_content_logo">
       <a class="footer__logo"></a>
       <p class="footer__copyright">© 2024 Все права защищены</p>
       <nav class="footer__nav">
@@ -33,9 +33,9 @@
                 <svg
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                 >
-                  <use href="./images/icons.svg#arrow-right"></use>
+                  <use href="./images/icons.svg#phone"></use>
                 </svg>
               </span>
               +7 916 165-55-55
@@ -47,9 +47,9 @@
                 <svg
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                 >
-                  <use href="./images/icons.svg#arrow-right"></use>
+                  <use href="./images/icons.svg#telegram"></use>
                 </svg>
               </span>
               Telegram
@@ -61,9 +61,9 @@
                 <svg
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                 >
-                  <use href="./images/icons.svg#arrow-right"></use>
+                  <use href="./images/icons.svg#whatsapp"></use>
                 </svg>
               </span>
               WhatsApp
@@ -75,12 +75,12 @@
                 <svg
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
+                  viewBox="0 0 20 20"
                 >
-                  <use href="./images/icons.svg#arrow-right"></use>
+                  <use href="./images/icons.svg#email"></use>
                 </svg>
               </span>
-              Qr-menu@test.tu
+              qr-menu@test.tu
             </a>
           </li>
         </ul>
