--- a/src/blocks/head/head.html
+++ b/src/blocks/head/head.html
@@ -16,5 +16,6 @@
   <link rel="apple-touch-icon" href="./images/favicon/apple-touch-icon.png" />
   <title>@@title</title>
   <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/libs/splide.min.css" />
   <link rel="stylesheet" href="./styles/styles.min.css" />
 </head>
