--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -1,37 +1,42 @@
 <!-- Шапка -->
 <header class="header">
-  <a class="header__logo"></a>
-  <menu class="menu header__menu">
-    <ul class="menu__list">
-      <li><a class="menu__link" href="#0">Преимущества</a></li>
-      <li><a class="menu__link" href="#0">Как это работает</a></li>
-      <li><a class="menu__link" href="#0">Тарифы</a></li>
-      <li><a class="menu__link" href="#0">FAQ</a></li>
-    </ul>
-    <ul class="menu__social-list">
-      <li><a class="menu__social-link" href="#0">
-        <svg
-          class="menu__social-icon"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-        >
-          <use href="./images/icons.svg#whatsapp"></use>
-        </svg>
-      </a></li>
-      <li><a class="menu__social-link" href="#0">
-        <svg
-          class="menu__social-icon"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-        >
-          <use href="./images/icons.svg#telegram"></use>
-        </svg>
-      </a></li>
-    </ul>
-    <button class="button button_theme_outline" type="button">
-      <span class="button__text">Войти</span>
-    </button>
-  </menu>
+  <div class="header__indent">
+    <a class="header__logo"></a>
+    <menu class="header__menu">
+      <ul class="header__list">
+        <li><a class="header__link" href="#0">Преимущества</a></li>
+        <li><a class="header__link" href="#0">Как это работает</a></li>
+        <li><a class="header__link" href="#0">Тарифы</a></li>
+        <li><a class="header__link" href="#0">FAQ</a></li>
+      </ul>
+      <ul class="header__social-list">
+        <li><a class="header__social-link" href="#0">
+          <svg
+            class="header__social-icon"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 40 40"
+          >
+            <use href="./images/icons.svg#whatsapp"></use>
+          </svg>
+        </a></li>
+        <li><a class="header__social-link" href="#0">
+          <svg
+            class="header__social-icon"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 40 40"
+          >
+            <use href="./images/icons.svg#telegram"></use>
+          </svg>
+        </a></li>
+      </ul>
+      <button class="button button_theme_outline-grey" type="button">
+        <span class="button__text">Войти</span>
+      </button>
+      <button class="header__burger" type="button">
+        <span class="header__burger-item"></span>
+      </button>
+    </menu>
+  </div>
 </header>
