разработка лендинга продолжение

--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -1,101 +1,133 @@
 <!-- Как работает -->
 <section class="section hiw">
-  <div class="section__indent section__card section__card_bg_accent">
+  <div class="section__indent section__card section__card_bg_accent hiw__card">
     <h2 class="section__title">Как работает наше Qr-меню</h2>
-    <ul class="hiw__list">
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Гость сканирует QR-код</h3>
-        <div class="hiw__list-item-description">
-          <p>
-            Гости смогут посмотреть меню прямо со своего смартфона — достаточно
-            просканировать QR-код, размещённый на столике.
-          </p>
-          <ul class="list-bullet-decor">
-            <li>Не нужно устанавливать приложение</li>
-            <li>Не нужно ждать официанта</li>
-            <li>Отлично работает на смартфонах и любых других устройствах</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Главная</h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Выбор позиций</h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Просмотр деталей</h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Просмотр фотографии блюда</h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">
-          Фиксация сверху меню для быстрого доступа
-        </h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Оформление заказа</h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-      <li class="hiw__list-item">
-        <h3 class="hiw__list-item-title">Подтверждение заказа</h3>
-        <div class="hiw__list-item-description">
-          <p>Небольшое описание</p>
-          <ul class="list-bullet-decor">
-            <li>Пункты</li>
-            <li>Пункты</li>
-            <li>Пункты</li>
-          </ul>
-        </div>
-      </li>
-    </ul>
+    <div class="hiw__container">
+      <ul class="hiw__list">
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Гость сканирует QR-код</h3>
+          <div class="hiw__list-item-description">
+            <p>
+              Гости смогут посмотреть меню прямо со своего смартфона —
+              достаточно просканировать QR-код, размещённый на столике.
+            </p>
+            <ul class="list-bullet-decor">
+              <li>Не нужно устанавливать приложение</li>
+              <li>Не нужно ждать официанта</li>
+              <li>Отлично работает на смартфонах и любых других устройствах</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Главная</h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Выбор позиций</h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Просмотр деталей</h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Просмотр фотографии блюда</h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">
+            Фиксация сверху меню для быстрого доступа
+          </h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Оформление заказа</h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+        <li class="hiw__list-item">
+          <h3 class="hiw__list-item-title">Подтверждение заказа</h3>
+          <div class="hiw__list-item-description">
+            <p>Небольшое описание</p>
+            <ul class="list-bullet-decor">
+              <li>Пункты</li>
+              <li>Пункты</li>
+              <li>Пункты</li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+      <div class="hiw__images">
+        <picture>
+          <source srcset="./images/hiw__image-01.webp" type="image/webp" />
+          <img
+            class="hiw__image hiw__image_active"
+            src="./images/hiw__image-01.png"
+            alt=""
+          />
+        </picture>
+        <picture>
+          <source srcset="./images/hiw__image-02.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/hiw__image-02.png" alt="" />
+        </picture>
+        <picture>
+          <source srcset="./images/hiw__image-03.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/hiw__image-03.png" alt="" />
+        </picture>
+        <picture>
+          <source srcset="./images/hiw__image-04.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/hiw__image-04.png" alt="" />
+        </picture>
+        <picture>
+          <source srcset="./images/hiw__image-05.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/hiw__image-05.png" alt="" />
+        </picture>
+        <picture>
+          <source srcset="./images/hiw__image-06.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/hiw__image-06.png" alt="" />
+        </picture>
+      </div>
+    </div>
   </div>
 </section>
