--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,13 +5,13 @@
     <div class="page page_with_lead-image">
       @@include("../blocks/header/header.html")
       <main class="page__content">
-        @@include("../blocks/lead/lead.html")
-        @@include("../blocks/statistics/statistics.html")
-        @@include("../blocks/advantages/advantages.html")
-        @@include("../blocks/why/why.html")
-        @@include("../blocks/how/how.html")
+        <!-- @@include("../blocks/lead/lead.html") -->
+        <!-- @@include("../blocks/statistics/statistics.html") -->
+        <!-- @@include("../blocks/advantages/advantages.html") -->
+        <!-- @@include("../blocks/why/why.html") -->
+        <!-- @@include("../blocks/how/how.html") -->
         <!-- Особенности -->
-        <section class="section">
+        <!-- <section class="section">
           <div class="section__indent">
             <h2 class="section__title">
               Особенности нашего <span class="text-decor">Qr-меню</span>
@@ -227,17 +227,17 @@
               </li>
             </ul>
           </div>
-        </section>
-        @@include("../blocks/hiw/hiw.html")
-        @@include("../blocks/step/step.html")
-        <section class="section section_no_indent">
+        </section> -->
+        <!-- @@include("../blocks/hiw/hiw.html") -->
+        <!-- @@include("../blocks/step/step.html") -->
+        <!-- <section class="section section_no_indent">
           <h2 class="section__title section__title_section-indent">
             Комфортная цветовая схема
             <span class="text-decor text-decor_accent">день/ночь</span>
           </h2>
-        </section>
+        </section> -->
       </main>
-      @@include("../blocks/footer/footer.html")
+      <!-- @@include("../blocks/footer/footer.html") -->
     </div>
     <script src="./scripts/libs/splide.min.js"></script>
     <script src="./scripts/main.js"></script>
