--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -1,55 +1,64 @@
 <!-- Шапка -->
 <header class="header">
-  <div class="header__indent">
-    <button class="header__burger" type="button">
-      <span class="header__burger-item">
-        <span class="header__burger-item-bar"></span>
-        <span class="header__burger-item-bar"></span>
-      </span>
-    </button>
-    <a class="header__logo">
-      <img
-        class="header__logo-image"
-        src="./images/logo.svg"
-        alt="Логотип Qr-меню"
-      />
-    </a>
-    <menu class="header__menu">
-      <ul class="header__list">
-        <li class="header__list-item"><a class="header__link" href="#0">Преимущества</a></li>
-        <li class="header__list-item"><a class="header__link" href="#0">Как это работает</a></li>
-        <li class="header__list-item"><a class="header__link" href="#0">Тарифы</a></li>
-        <li class="header__list-item"><a class="header__link" href="#0">FAQ</a></li>
-      </ul>
-      <ul class="header__social-list">
-        <li class="header__social-list-item">
-          <a class="header__social-link" href="#0">
-            <svg
-              class="header__social-icon"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 40 40"
-            >
-              <use href="./images/icons.svg#whatsapp"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="header__social-list-item">
-          <a class="header__social-link" href="#0">
-            <svg
-              class="header__social-icon"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 40 40"
-            >
-              <use href="./images/icons.svg#telegram"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </menu>
-    <button class="header__login-button button button_theme_outline-grey" type="button">
-      <span class="button__text">Войти</span>
-    </button>
-  </div>
+  <button class="header__burger" type="button">
+    <span class="header__burger-item">
+      <span class="header__burger-item-bar"></span>
+      <span class="header__burger-item-bar"></span>
+    </span>
+  </button>
+  <a class="header__logo">
+    <img
+      class="header__logo-image"
+      src="./images/logo.svg"
+      alt="Логотип Qr-меню"
+    />
+  </a>
+  <menu class="header__menu">
+    <ul class="header__list">
+      <li class="header__list-item">
+        <a class="header__link" href="#0">Преимущества</a>
+      </li>
+      <li class="header__list-item">
+        <a class="header__link" href="#0">Как это работает</a>
+      </li>
+      <li class="header__list-item">
+        <a class="header__link" href="#0">Тарифы</a>
+      </li>
+      <li class="header__list-item">
+        <a class="header__link" href="#0">FAQ</a>
+      </li>
+    </ul>
+    <ul class="header__social-list">
+      <li class="header__social-list-item">
+        <a class="header__social-link" href="#0">
+          <svg
+            class="header__social-icon"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 40 40"
+          >
+            <use href="./images/icons.svg#whatsapp"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header__social-list-item">
+        <a class="header__social-link" href="#0">
+          <svg
+            class="header__social-icon"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 40 40"
+          >
+            <use href="./images/icons.svg#telegram"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </menu>
+  <button
+    class="header__login-button button button_theme_outline-grey"
+    type="button"
+  >
+    <span class="button__text">Войти</span>
+  </button>
 </header>
