--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -237,7 +237,7 @@
           </h2>
         </section> -->
       </main>
-      <!-- @@include("../blocks/footer/footer.html") -->
+      @@include("../blocks/footer/footer.html")
     </div>
     <script src="./scripts/libs/splide.min.js"></script>
     <script src="./scripts/main.js"></script>
