lead, statistics - addaptive

--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -1,5 +1,5 @@
 <!-- Главный баннер -->
-<section class="lead section">
+<section class="lead section section_no-indent">
   <div class="section__indent lead__inner">
     <div class="lead__content">
       <h1 class="lead__title">
