--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,9 +5,9 @@
     <div class="page page_with_lead-image">
       @@include("../blocks/header/header.html")
       <main class="page__content">
-        <!-- @@include("../blocks/lead/lead.html") -->
-        <!-- @@include("../blocks/statistics/statistics.html") -->
-        <!-- @@include("../blocks/advantages/advantages.html") -->
+        @@include("../blocks/lead/lead.html")
+        @@include("../blocks/statistics/statistics.html")
+        @@include("../blocks/advantages/advantages.html")
         <!-- @@include("../blocks/why/why.html") -->
         <!-- @@include("../blocks/how/how.html") -->
         <!-- Особенности -->
