--- a/src/blocks/advantages/advantages.html
+++ b/src/blocks/advantages/advantages.html
@@ -9,11 +9,17 @@
       <ul class="splide__list">
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
               <h2 class="banner-card__title">Инновация и современность</h2>
               <div class="banner-card__description">
@@ -28,15 +34,19 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">
-                Интерактивность для клиентов
-              </h2>
+              <h2 class="banner-card__title">Интерактивность для клиентов</h2>
               <div class="banner-card__description">
                 <p>
                   Электронное меню предоставляет клиентам возможность
@@ -50,11 +60,17 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
               <h2 class="banner-card__title">
                 Улучшенное клиентское обслуживание
@@ -72,11 +88,17 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
               <h2 class="banner-card__title">
                 Экономия средств на печати и обслуживание меню
@@ -93,11 +115,17 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
               <h2 class="banner-card__title">
                 Улучшенная аналитика и отчетность
@@ -115,15 +143,19 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">
-                Обновление в реальном времени
-              </h2>
+              <h2 class="banner-card__title">Обновление в реальном времени</h2>
               <div class="banner-card__description">
                 <p>
                   Владельцы ресторанов могут легко обновлять цены, добавлять
@@ -136,15 +168,19 @@
         </li>
         <li class="splide__slide">
           <article class="banner-card">
-            <img
-              class="banner-card__image"
-              src="./images/advantages__image-01.jpg"
-              alt=""
-            />
+            <picture>
+              <source
+                srcset="./images/advantages__image-01.webp"
+                type="image/webp"
+              />
+              <img
+                class="banner-card__image"
+                src="./images/advantages__image-01.jpg"
+                alt=""
+              />
+            </picture>
             <div class="banner-card__content">
-              <h2 class="banner-card__title">
-                Экологическая ответственность
-              </h2>
+              <h2 class="banner-card__title">Экологическая ответственность</h2>
               <div class="banner-card__description">
                 <p>
                   Использование электронного меню позволяет сократить
