--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@
         @@include("../blocks/lead/lead.html")
         @@include("../blocks/statistics/statistics.html")
         @@include("../blocks/advantages/advantages.html")
-        <!-- @@include("../blocks/why/why.html") -->
+        @@include("../blocks/why/why.html")
         <!-- @@include("../blocks/how/how.html") -->
         <!-- Особенности -->
         <!-- <section class="section">
